fix misaligned h1 on user page

--- a/app/assets/stylesheets/content/_user.css.scss
+++ b/app/assets/stylesheets/content/_user.css.scss
@@ -1,7 +1,4 @@
 #user {
-  h1 {
-    margin-left: 10px;
-  }
   div.admin {
     margin-right: 10px;
   }
